doc: java preview feature